--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.1",
+    "bcrypt": "^5.1.1",
     "mysql": "^2.18.1",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5",
     "uuidv4": "^6.2.13",
     "zustand": "^5.0.3"
   },
