--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "axios-rate-limit": "^1.4.0",
     "bcrypt": "^5.1.1",
     "mysql": "^2.18.1",
     "next": "15.2.1",
