--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,13 @@
+# DB_HOST=localhost
+# DB_USER=root
+# DB_PASSWORD=
+# DB_NAME=inventra
+
+# NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
+
 DB_HOST=bwybkcq82enzs1mtccet-mysql.services.clever-cloud.com
 DB_USER=usnoe4aj0fs0x74w
 DB_PASSWORD=mdYcUuDKcxBxfscqm5gD
 DB_NAME=bwybkcq82enzs1mtccet
 
-BASE_URL=
+NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
