--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^1.8.1",
     "axios-rate-limit": "^1.4.0",
     "bcrypt": "^5.1.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.12.0",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
